added client with mock data

--- a/views/content.html
+++ b/views/content.html
@@ -29,14 +29,16 @@
             <h1>Content Editor</h1>
         </header>
         <main>
-            <section>
-                <h2>Content to Edit</h2>
-            </section>
+            <h2>Home Content</h2>
+            <section id="home"></section>
+
+            <h2>Locations Content</h2>
+            <section id="locations"></section>
         </main>
     </div>
     <script src="//code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 
-    <script src="/js/client.js"></script>
+    <script src="/js/content.js"></script>
 </body>
 
 </html>
