--- a/views/lighting.html
+++ b/views/lighting.html
@@ -26,19 +26,17 @@
 <body>
     <div class="container">
         <header>
-            <h1>Locations</h1>
+            <h1>Lighting</h1>
         </header>
         <main>
-            <h2>HES Locations</h2>
-            <section id="hes_locations"></section>
+            <h2>Lighting Equipment</h2>
+            <section id="lighting"></section>
 
-            <h2>Cinelease Locations</h2>
-            <section id="cinelease_locations"></section>
         </main>
     </div>
     <script src="//code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 
-    <script src="/js/locations.js"></script>
+    <script src="/js/lighting.js"></script>
 </body>
 
 </html>
