wired up locations to get data from server

--- a/views/locations.html
+++ b/views/locations.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Home</title>
+    <title>Locations</title>
     <meta name="description" content="Title description">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,17 +26,19 @@
 <body>
     <div class="container">
         <header>
-            <h1>Edit data and content</h1>
+            <h1>Locations</h1>
         </header>
         <main>
-          <h2>TODO - Sign in....</h2>
-           <ul>
-               <li><a href="./locations">Locations</a></li>
-               <li><a href="./content">Content</a></li>
-               <li><a href="./lighting">Lighting</a></li>
-           </ul>
+            <h2>HES Locations</h2>
+            <section id="hes_locations"></section>
+
+            <h2>Cinelease Locations</h2>
+            <section id="cinelease_locations"></section>
         </main>
     </div>
+    <script src="//code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
+
+    <script src="/js/locations.js"></script>
 </body>
 
 </html>
